Add FaroSpark. (#14)
Co-authored-by: olwahab <ola.wahab@zalando.de>